# regulator

./: .gitignore  .pre-commit-config.yaml  ECONOMIC_FIXES_SUMMARY.md  Makefile  README.md  dashboard_validation_report.md  env.template  justfile  mypy.ini  pyproject.toml  regulator_demo.ipynb
.github/workflows/: ci.yml
dashboard/: README.md  __init__.py  app.py  main.py
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: dashboard.html
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.yml
scripts/: __init__.py  agent_demo.py  analyze_conversation_realism.py  analyze_episodes.py  analyze_llm_messages.py  cartel_example.py  chat_demo.py  collusive_leniency_experiment.py  demo_llm_conversation.py  economic_validation_demo.py  enhanced_economic_demo.py  enhanced_realistic_messages.py  example_conversation_thread.py  example_thread.py  generate_comprehensive_episode.py  generate_llm_episode.py  improved_natural_messages.py  leniency_experiment.py  real_llm_messages.py  regulator_demo.py  run_episode.py  run_experiment.py  setup_env.py  stress_test.py  test_message_dashboard.py  train_ml_detector.py  view_messages.py
src/: economic_validation.py  regulator_cli.py
src/agents/: __init__.py  adaptive_agent.py  chat_firm.py  enhanced_regulator.py  firm_agents.py  ml_regulator.py  regulator.py  stealth_agent.py
src/cartel/: __init__.py  cartel_env.py  simplified_cartel_env.py
src/detectors/: __init__.py  llm_detector.py  ml_detector.py
src/episode_logging/: episode_logger.py  episode_runner.py  logger.py
src/experiments/: __init__.py  experiment_runner.py  trainer.py
src/logging/: __init__.py  episode_runner.py
src/monitoring/: enhanced_dashboard.py
src/regulator/: __init__.py  cli.py
src/regulator/agents/: __init__.py  firm_agents.py  leniency.py  regulator.py
src/regulator/cartel/: cartel_env.py
src/regulator/episode_logging/: episode_runner.py  logger.py
src/regulator/experiments/: experiment_runner.py  trainer.py
src/regulator/monitoring/: __init__.py
test_logs/: experiment_20250922_223516.jsonl
test_output/: demo_episode_000.jsonl
tests/: test_adaptive_agent.py  test_agents.py  test_cli.py  test_dashboard.py  test_env.py  test_episode_logger.py  test_episode_runner_final.py  test_leniency.py  test_llm_detector.py  test_llm_detector_final.py  test_logger.py  test_ml_detector.py  test_regulator.py  test_regulator_cli.py
tests/integration/: test_chat_integration.py  test_cli.py  test_dashboard.py  test_dashboard_integration.py  test_experiment_workflows.py  test_leniency_experiments.py  test_regulator_cli.py  test_regulator_monitoring.py
tests/smoke/: __init__.py  test_dashboard.py  test_simulation.py
tests/unit/: test_dashboard.py  test_economic_validation.py  test_edge_cases.py
tests/unit/agents/: test_agents.py  test_enhanced_regulator.py  test_firm_agents.py  test_leniency.py  test_ml_regulator.py  test_regulator.py
tests/unit/cartel/: test_cartel_env.py  test_env.py  test_simplified_cartel_env.py
tests/unit/episode_logging/: test_episode_logger_enhanced.py  test_episode_runner_final.py
tests/unit/experiments/: test_experiment_runner.py  test_trainer.py
tests/unit/monitoring/: test_enhanced_dashboard.py  test_init.py
tests/unit/regulator/: test_regulator_init.py
